# AeroChat

./: .gitignore  CMakeLists.txt  README.md
chatserver1/: CMakeLists.txt  config.ini
chatserver1/include/: CServer.h  CSession.h  ChatGrpcClient.h  LogicSystem.h  MysqlDao.h  RedisMgr.h  const.h
chatserver1/src/: CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ChatServiceImpl.cpp  LogicSystem.cpp  RedisMgr.cpp
chatserver2/: CMakeLists.txt  config.ini
chatserver2/include/: CServer.h  CSession.h  ChatGrpcClient.h  ChatServiceImpl.h  DistLock.h  LogicSystem.h  MysqlDao.h  RedisMgr.h
chatserver2/src/: AsioIOServicePool.cpp  CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ChatServiceImpl.cpp  DistLock.cpp  LogicSystem.cpp  RedisMgr.cpp
gateserver/: CMakeLists.txt  config.ini
gateserver/include/: AsioIOServicePool.h  ConfigMgr.h  Cserver.h  HttpConnection.h  LogicSystem.h  MysqlDao.h  MysqlMgr.h  RedisMgr.h  StatusGrpcClient.h  VarifyGrpcClient.h  const.h
gateserver/src/: ConfigMgr.cpp  Cserver.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp  StatusGrpcClient.cpp  VarifyGrpcClient.cpp
statusserver/: CMakeLists.txt  config.ini
statusserver/include/: Logger.h  RedisMgr.h  const.h
statusserver/src/: DistLock.cpp  Logger.cpp  StatusServer.cpp  StatusServiceImpl.cpp
